# very_loaded_api

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 7e853b12c0c5_add_task_table.py  8e302b27ec3d_add_time_zone_in_tasks_for_start_and_end.py
src/: celery_app.py  main.py
src/celery_app/: celery_tasks.py
src/core/: database.py
src/task/: models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_api.py
tests/task/: test_task_repository.py  test_task_router.py  test_task_service.py
