[project]
name = "very-loaded-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "httpx",
  "pytest-asyncio",
  "ruff",
]
[tool.pytest.ini_options]
pythonpath = ["."]
