[project]
name = "very-loaded-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.136.0",
    "psycopg[binary]>=3.3.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "httpx",
  "pytest-asyncio",
  "ruff",
]
[tool.pytest.ini_options]
pythonpath = ["."]
